# jtools

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  README.md  pyproject.toml
example/depgraph/topics/: README.md  topics.gv
src/jtools/: __init__.py  bom_disposal.py  depgraph.py
src/jtools/depgraph/: key.txt  topics.gv  tutorial.py
